# opt-tool

./: README.md  setup.cfg
etc/: opt-tool.yaml
etc/examples/: one_empty_package.yaml  one_package_with_empty_subpackages.yaml  one_package_with_subpackages_and_class.yaml  one_package_with_subpackages_and_empty_classes.yaml  two_empty_packages.yaml
opt_tool/: config.py  main.py  utils.py
