[metadata]
name = opt-tool
summary = OpenStack Templating Service
description-file =
    README.rst
author = Mikhail Ivanov
author-email = difmel@gmail.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
